fix header source text align and scling for small display

--- a/_sass/jekyll-theme-cayman-blog.scss
+++ b/_sass/jekyll-theme-cayman-blog.scss
@@ -217,7 +217,11 @@ a {
   opacity: 0.7;
   font-style: italic;
   float: right;
+  text-align: right;
   margin-right: 0.5rem;
+  @include small {
+    font-size: 0.7rem;
+  }
 }
 
 .main-content {
